[ADD] 23/08/08 Movie24 기능추가
1. MovieInfo 테이블 생성에 value들 추가후 해당되는
resources(비디오랑 정보들) 추가

--- a/src/main/webapp/resources/css/help/Movie24_post_info.css
+++ b/src/main/webapp/resources/css/help/Movie24_post_info.css
@@ -280,6 +280,13 @@ nav{
             font-size: 15px;
             text-align: left;
         }
+        .tr2{
+            padding-bottom: 6px;
+            width: 250px;
+            height: 50px;
+            font-size: 15px;
+            text-align: left;
+        }
         #tr{
         	padding-bottom: 6px;
 		    width: 600px;
