--- a/src/main/webapp/resources/css/main/Movie24.css
+++ b/src/main/webapp/resources/css/main/Movie24.css
@@ -378,7 +378,7 @@ nav{
 /* ----------------------------이벤트 영역---------------- */
 #event_area{
     width: 1300px;
-    height: 700px;
+    height: 755px;
     /* background-color: blue; */
     margin: 0 auto;
     /* padding: 0px 45px; */
@@ -413,20 +413,39 @@ nav{
 }
 #event_up img{
     height: 320px;
-    margin: 0px 10px;
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
+	#event_up li{
+		overflow: hidden;
+		height: 320px;
+		margin: 0px 10px;
+		border-radius: 10px;
+		box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+		margin-bottom: 5px;
+	}
 #event_down img{
     height: 320px;
-    margin: 15px 13px;
+    overflow: hidden;
+}
+	#event_down li{
+		overflow: hidden;
+		height: 320px;
+		margin: 15px 13px;
+		border-radius: 10px;
+		box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.4);
+	}
+#event_right{
+    width: 380px;
+    height: 660px;
+    border-radius: 10px;
+    /* background-color: red; */
+    float: left;
     box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
     #event_right img{
         height: 660px;
         float: right;
-        box-shadow: 10px 15px 15px rgba(0, 0, 0, 0.4);
     }
     #blue{
         position: absolute;
@@ -436,9 +455,16 @@ nav{
         background-color: #362FD9;
         z-index: -1;
     }
-    #event_up img:hover, #event_down img:hover, #event_right img:hover{
-        filter: brightness(0.9);
-         transform: scale(1.06);
+    #event_up img:hover, #downImg2:hover{
+        transform: scale(1.1);
+        transition: 0.4s ease;
+    }
+    #event_down #downImg1:hover{
+        transform: scale(1.08);
+        transition: 0.4s ease;
+    }
+    #event_right img:hover{
+    	transform: scale(1.06);
         transition: 0.4s ease;
     }
 /* --------------------빠른메뉴 영역--------------------- */
@@ -451,13 +477,11 @@ nav{
 #blue_area {
     width: 100%;
     height: 450px;
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
     background-color: #362FD9;
 }
     #blue_image {
         text-align: center;
+        padding-top: 50px;
     }
       
     #blue_image img {
